# donner-agents

./: .gitignore  package-lock.json  package.json  playwright.config.ts  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: QuocPham_summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  2_lab2_a.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py  research_manager.py
3_crew/my_coding_team/: README.md  pyproject.toml
3_crew/my_coding_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/my_coding_team/src/my_coding_team/: crew.py  main.py
3_crew/my_coding_team/src/my_coding_team/config/: agents.yaml  tasks.yaml
3_crew/my_debate/: pyproject.toml
3_crew/my_debate/output/: decision.md  opposition.md  proposal.md
3_crew/my_debate/output_01/: decision.md  opposition.md  proposal.md
3_crew/my_debate/output_02/: decision.md  opposition.md  proposal.md
3_crew/my_debate/src/my_debate/: crew.py  main.py
3_crew/my_debate/src/my_debate/config/: agents.yaml  tasks.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  checkpoints.sqlite-shm  checkpoints.sqlite-wal  memory.db-shm  memory.db-wal  package-lock.json  package.json  sidekick.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  accounts.py  accounts_server.py  date_server.py  mcp_params.py  trading_floor.py
guides/: 10_intermediate_python.ipynb
(+24 files in other folders)
