[project]
name = "my_coding_team"
version = "0.1.0"
description = "my_coding_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "gradio>=5.36.2",
]

[project.scripts]
my_coding_team = "my_coding_team.main:run"
run_crew = "my_coding_team.main:run"
train = "my_coding_team.main:train"
replay = "my_coding_team.main:replay"
test = "my_coding_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
