[project]
name = "my_debate"
version = "0.1.0"
description = "my_debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
my_debate = "my_debate.main:run"
run_crew = "my_debate.main:run"
train = "my_debate.main:train"
replay = "my_debate.main:replay"
test = "my_debate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
